--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       Afirad4Life -- BAN
       rick6pack -- BAN
       webcats12 -- BAN
+      Last elimnated -- BAN
     </a>
   </body>
 </html>
