--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<iframe src="https://unbelievaboat.com/leaderboard/650824236432228363/widget" width="1920" height="1080" style="border: 0;"></iframe>
+<iframe src="https://unbelievaboat.com/leaderboard/650824236432228363/widget" width="1500" height="720" style="border: 0;"></iframe>
+<iframe src="https://discordapp.com/widget?id=650824236432228363&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
